--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div id="toporosa">
-        <p><a href="https://www.linkedin.com/in/millenaboniolo//">@millenaboniolo</a></p>
+        <p id="linkedin"><a href="https://www.linkedin.com/in/millenaboniolo//">@millenaboniolo</a></p>
     </div>
     <div id="card">
         <div id="card-header">
